[tool.poetry]
name = "blueprint_api"
version = "0.1.0"
description = ""
authors = [
    "Tom Camp <tom.camp@civicactions.com>"
]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.12.0"
whitenoise = "^6.1.0"
pathlib = "^1.0.1"
jsonschema = "^4.6.0"
django-filter = "^22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
